# datatoai_lecture

./: .gitignore  Part1_데이터 이해_그로스 분석.ipynb  Part1_데이터 이해_그로스 분석_리팩토링.ipynb  Part1_심화이론_notebook_md.md  Part1_이론교육.md  Part1_이론교육_그로스 분석.ipynb  Part2_심화이론_notebook_md.md  Part2_예측모델_시나리오 분석.ipynb  Part2_이론교육.md  Part2_이론교육_시나리오 분석.ipynb  Part3_데이터 분석 자동화_RAG_Chatbot.ipynb  Part3_심화이론_notebook_md.md  Part3_이론교육.md  Part3_이론교육_RAG_Chatbot.ipynb  data_analysis_training_part1_3_20260321075847  -  복구됨.pptx  data_analysis_training_part1_3_20260321075847.pptx  data_analysis_training_part1_3_20260321083805  -  복구됨.pptx  data_analysis_training_part1_3_20260321083805.pptx  earthquake_analysis.ipynb  local_holidays.csv  local_holidays_.csv  national_holidays.csv  national_holidays_.csv  pyproject.toml  streamlit_app.py  데이터에서 AI까지_강의소개 및 Part1_0321.pptx  데이터에서 AI까지_분석.예측.RAG 챗봇 만들기_교육 소개자료_260303.pptx  데이터에서 AI까지_분석.예측.RAG 챗봇 만들기_교육 커리큘럼_260303.xlsx  수정계획.txt  전체_기본이론_교육자료.pptx
catboost_info/: catboost_training.json  learn_error.tsv  test_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
catboost_info/test/: events.out.tfevents
chroma_db_part3/: chroma.sqlite3
database/: sales_analysis.db.wal
results/part1/: Part1_QA_지식베이스.md  Part1_분석결과_요약.md  category_sales.csv  city_sales.csv  cluster_holiday_promo.csv  cluster_sales.csv  daily_sales.csv  growth_decomposition.csv  holiday_pattern_d3.csv  holiday_promo_comparison.csv  holiday_pure_effect.csv  monthly_sales.csv  promo_by_category.csv  promo_effect.csv  store_basket_analysis.csv  type_sales.csv  (+3 more)
(+6 files in other folders)
