[project]
name = "datatoai"
version = "0.1.0"
description = "datatoai_lecture"
authors = [
    {name = "trouvlemaker",email = "trouvlemaker@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "numpy (>=2.3.5,<3.0.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "jupyter (>=1.1.1,<2.0.0)",
    "ipykernel (>=7.1.0,<8.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "xgboost (>=3.1.2,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
    "prophet (>=1.2.1,<2.0.0)",
    "openai (>=2.14.0,<3.0.0)",
    "langchain (>=1.2.0,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-openai (>=1.1.6,<2.0.0)",
    "chromadb (>=1.4.0,<2.0.0)",
    "langchain-ollama (>=1.0.1,<2.0.0)",
    "statsmodels (>=0.14.6,<0.15.0)",
    "plotly (>=6.5.0,<7.0.0)",
    "torch (==2.10.0)",
    "sentence-transformers (>=5.2.2,<6.0.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "tabulate (>=0.9.0,<0.10.0)",
    "pmdarima (>=2.1.1,<3.0.0)",
    "optuna (>=4.7.0,<5.0.0)",
    "lightgbm (>=4.6.0,<5.0.0)",
    "catboost (>=1.2.8,<2.0.0)",
    "shap (>=0.50.0,<0.51.0)",
    "duckdb (>=1.4.4,<2.0.0)",
    "streamlit (>=1.54.0,<2.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
